CSS/style.css
* {

    margin: 0;
    padding: 0;
    box-sizing: border-box;

}

/* REGOLE CONTAINERS */

/* Regole del Body */
body {

    background-color: black;

}

/* Regole container-title */
.container-title {

    text-align: center;
    width: 50%;
    background-image: url(../IMG/wall.png);
    background-position: center;

}

/* Regole container-main */
.container-main {

    /* imposto il layout a flexbox per disporre i figli in modo flessibile verticalmente*/ 
    display: flex;
    flex-direction: column;
    align-items: center;

}

/* Regole container-card */
.container-card {

    /* Imposto il layout come una griglia (orizzontalmente) */
    display: grid;
    justify-content: center;
    /* Creo 3 colonne di dimensione uguale (1fr= frazione di spazio) */
    grid-template-columns: repeat(3, 1fr);
    /* Creo 2 righe di dimensione uguale */
    grid-template-rows: repeat(2, 1fr);
    gap: 1vw;
    max-width: 50vw;
    background-image: url(../IMG/cork.png);
    background-position: center;
    padding: 3vw 8vw;

}

/* Regole delle card */
.card {

    /* Metto in position relative card per poter mettere in posizione assoluta pin */
    position: relative;
    display: flex;
    flex-direction: column;
    background-color: white;
    text-align: start;
    padding: 0.6vw;
    /* Aggiungo una transizione per la trasformazione e l'ombra */
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    /* ombra leggera della card */
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);

}

.card:hover {

    /* trasformazione e rotazione parziale dlla card */
    transform: translateY(-10px) scale(1.05) rotate(10deg);
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0, 3);
    cursor: pointer;

}

/* Regole container-img  */
.container-img {

    display: flex;
    justify-content: center;
    height: 11vw;
    /* nel caso in cui l'immagine dovesse uscire dai bordi verrebbe nascosta*/
    overflow: hidden;

}

/* Regole content */
.content {

    display: flex;
    flex-direction: column;
    background-color: white;

}


/* REGOLE ELEMENTI */

/* regole pin */
.pin {

    position: absolute;
    /* Posiziono il pin a una distanza di -0.8 dal margine superiore della card  */
    top: -0.8vw;
    /* Centro il pin orizzontalmente */
    left: 50%;
    /* Centro il pin esattamente a metà rispetto alla sua larghezza */
    transform: translate(-50%);
    width: 1.5vw;
    z-index: 1000;

}


/* Titoli */
h1,
h2 {

    font-family: "Edu TAS Beginner", serif;

}

h1 {

    margin-top: 10px;
    font-size: 3vw;

}

h2 {

    font-size: 1vw;

}

/* Date */
span {

    font-size: 1vw;
    padding-top: 20px;
    color: lightslategray;
    font-family: "Sometype Mono", monospace;

}

/* Overlay per l'immagine a schermo intero */
.fullscreen-overlay {

    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    /* Sfondo scuro */
    background: rgba(0, 0, 0, 0.7);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 9999;
    /* Sfoca lo sfondo */
    backdrop-filter: blur(10px);

}

/* Contenitore dell'immagine fullscreen */
.fullscreen-image {

    position: relative;
    max-width: 80vw;
    max-height: 80vh;
    overflow: hidden;

}

/* X per uscire dall'immagine */
.fullscreen-close {

    position: absolute;
    top: -20px;
    right: 10px;
    font-size: 3rem;
    color: white;
    cursor: pointer;
    z-index: 10000;

}

/* RESPONSIVE */

/* TABLET */
@media (max-width: 768px) {

    .container-title {

        width: 100vw;

    }

    .container-card {

        max-width: 100vw;
        /* Le colonne diventeranno da 3 a 2 */
        grid-template-columns: repeat(2, 1fr);
        padding: 6vw;
        gap: 4vw;

    }

    .card {

        padding: 2vw;

    }

    .container-img {

        height: 45vw;
        width: 40vw;

    }

    .pin {

        top: -2vw;
        width: 4.5vw;

    }

    h1 {

        font-size: 13vw;

    }

    h2 {

        font-size: 4vw;

    }

    span {

        font-size: 3vw;

    }

}

/* MOBILE */
@media (max-width: 480px) {

    .container-card {

        width: 100vw;
        /* Le colonne diventeranno da 2 a 1 */
        grid-template-columns: 1fr;
        padding: 10vw;

    }

    .card {
   
        padding-top: 4vw;
        margin-bottom: 3vw;
        position: relative;

    }

    .container-img {

        height: 70vw;
        width: 75vw;

    }

    .container-img img {

        margin-top: 5px;
        /* Mantengo l'immagine all'interno del contenitore senza tagliarla  */
        object-fit: contain;

    }

    .pin {

        position: absolute;
        top: -3.8vw;
        left: 50%;
        transform: translateX(-50%);
        width: 8vw;

    }

    .content {

        margin-left: 3vw;

    }


    h1 {

        font-size: 18vw;

    }

    h2 {

        font-size: 8vw;

    }

    span {

        font-size: 5.5vw;

    }

}

